--- a/src/assets/css/FormIndex.css
+++ b/src/assets/css/FormIndex.css
@@ -75,10 +75,18 @@ opacity: 1;
 }
 
 .formForm button{
-    background: #FFFFFF 0% 0% no-repeat padding-box;
-    border: 1px solid #707070;
-    width: 150px;
+    margin-top: 30px;
+    margin-left: 10px;    
+    width: 100px;
     height: 25px;
+    font-size: 10px;
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    box-shadow: 0px 1px 6px #00000029;
+    border: 1px solid #707070;
     border-radius: 4px;
     opacity: 1;
+}
+
+.formForm button:hover{
+    background-color: #6592E6;
 }
