--- a/src/assets/css/Header.css
+++ b/src/assets/css/Header.css
@@ -1,50 +1,51 @@
-*{
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
 }
 
 .container {
-   
-    width:  100%;
-    height: 250px;
-    opacity: 1;
-    margin-bottom: 2px;
+  width: 100%;
+  height: 250px;
+  opacity: 1;
+  margin-bottom: 2px;
 }
 
-.header{
-   
-    width: 100%;
-    height: auto;
-    padding: 40px;
-    background-color: #707070;
-    
-    }
-
-.h2{
-width: 100%;
-height: 23px;
-text-align: center;
-font: normal normal normal 20px/24px Helvetica Neue;
-letter-spacing: 0px;
-color: #FFFFFF;
-opacity: 1;
+.header {
+  position: relative;
+  height: auto;
+  width: 100%;
+  overflow: hidden;
+  padding: 15px;
+  background-image: url(../image/background_header.png);
+  background-size: auto;
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.h1{
-width: 100%;
-height: 48px;
-text-align: center;
-font: normal normal bold 40px/49px Helvetica Neue;
-letter-spacing: 0px;
-color: #FFFFFF;
-opacity: 1;
+.h2 {
+  text-align: center;
+  font: normal normal normal 20px/24px Helvetica Neue;
+  letter-spacing: 0px;
+  color: #ffffff;
+  opacity: 1;
 }
 
-p{
-margin-top: 5px;
-text-align: center;
-font: normal normal normal 14px/16px Helvetica Neue;
-letter-spacing: 0px;
-color: #FFFFFF;
-opacity: 1;
+.h1 {
+  text-align: center;
+  font: normal normal bold 40px/49px Helvetica Neue;
+  letter-spacing: 0px;
+  color: #ffffff;
+  opacity: 1;
+}
+
+p {
+  margin-top: 5px;
+  text-align: center;
+  font: normal normal normal 14px/16px Helvetica Neue;
+  letter-spacing: 0px;
+  color: #ffffff;
+  opacity: 1;
 }
