incluido módulo de compartilhamento e customizado cards de produtos

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+input{
+  color: #888888;
+    background-color: #FFFFFF;
+    border-width: 0.5px;
+    border-color: #888888;
+}
+
 /* #root {
   max-width: 1280px;
   margin: 0 auto;
