--- a/src/assets/css/card.css
+++ b/src/assets/css/card.css
@@ -3,26 +3,36 @@
     align-items: center;
     justify-content: center;
     margin-bottom: 20px;
+    margin-top: 20px;
+
+    text-align: left;
+    font: normal normal bold 18px/16px Helvetica Neue;
+    letter-spacing: 0px;
+    color: #888888;
+    opacity: 1;
+
+}
+
+.containerProdutos{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: CENTER;
+  justify-content: CENTER;
+
 
 }
 
 .divProdutos{
+    width: 70%;
     display: grid;
     grid-template-columns: auto auto auto auto;
-
     grid-gap: 10px;
     margin: 0 3 rem 0;
-    background-color: aqua;
+
    
 }
 
-.cartao p{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    color: black;
-}
 
 .btn{
     display: flex;
