adicionado footer na página

--- a/src/assets/css/Header.css
+++ b/src/assets/css/Header.css
@@ -3,19 +3,19 @@
   padding: 0;
 }
 
-.container {
+.containerHeader {
   width: 100%;
-  height: 250px;
+  height: 350px;
   opacity: 1;
   margin-bottom: 2px;
 }
 
 .header {
-  position: relative;
-  height: auto;
+  height: 350px;
   width: 100%;
-  overflow: hidden;
+
   padding: 15px;
+  background-color: #ffffff;
   background-image: url(../image/background_header.png);
   background-size: auto;
   background-repeat: no-repeat;
