--- a/src/assets/css/FormIndex.css
+++ b/src/assets/css/FormIndex.css
@@ -1,10 +1,11 @@
-.container{
+.containerForm{
     width: 100%;
     height: 250px;
     display: flex;
     margin-bottom: 5px;
     flex-direction: row;
    justify-content: center;
+
   
 }
 
